# verified-koopman

./: .gitignore  CITATION.cff  LICENSE  LICENSE.md  README.md  pyproject.toml  requirements.txt
configs/: cab_platinum_template.json  default.yaml  lorenz.yaml  toy2d.yaml
docs/: installation.md  lean_verification.md  reproducing_paper.md
edmd-lattice-gff/: README.md
edmd-lattice-gff/python/: certify_lattice_gff_edmd.py
lean/: README.md  lake-manifest.json  lakefile.lean
lean/Scripts/: ExportSemanticClosure.lean
lean/VerifiedKoopman/: HeytingOps.lean  NucleusReLU.lean  NucleusThreshold.lean  ParametricHeyting.lean
lean/VerifiedKoopman/SemanticClosure/MR/: Basic.lean  ClosureOperator.lean  InverseEvaluation.lean
licenses/: Apoth3osis-Small-Business-License-1.0.md
notebooks/: quickstart.ipynb
scripts/: analyze_heyting.py  run_experiments.py  run_safedmd_experiment.py  train_nba.py  verify_lean.sh
src/verified_koopman/: __init__.py
src/verified_koopman/analysis/: __init__.py  heyting_analysis.py  lyapunov.py
src/verified_koopman/data/: __init__.py  synth_systems.py
src/verified_koopman/losses/: __init__.py  curriculum.py  heyting_losses.py
src/verified_koopman/models/: __init__.py  koopman_ae.py  learnable_heyting.py  nucleus_bottleneck.py
src/verified_koopman/utils/: __init__.py  training.py
src/verified_koopman/verification/: __init__.py  dreal_verifier.py  lean_gate.py
src/verified_koopman/verification/safedmd/: __init__.py  controller.py  error_bounds.py
tests/: test_heyting.py  test_nucleus.py  test_safedmd.py  test_training.py
